[tool.poetry]
name = "to-do-list"
version = "0.1.0"
description = "virtual_env"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "to_do_list"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
